# releases

./: .gitignore  AUTHOR  AUTHORS.md  CITATION.cff  CITING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile.am  Makefile.in  NOTES  README.md  aclocal.m4  build  configure  configure.ac
Example/: Example-8.0.inp  Example-8.0.pts  Example-8.0.tgsd  Example.inp  Example.pts
Manual/: fall3d.doxygen.config
Other/Dep/: Deposit_nc.tbl  Deposit_txt.tbl
Other/Meteo/Tables/: ERA5.hyb  ERA5.tbl  GFS.tbl  GRIB2NC.tbl  WRF.tbl
Other/Meteo/Utils/: README  areas.def  era5_ml.py  era5_pl.py  era5_sfc.py  gdas.py  gfs.py  gfs_grib.py
Other/Meteo/Utils/grib_utils/: gfs_0p25.levels  gfs_0p50.levels  grib2nc.sh
Other/Sat/: Sat.tbl
Sources/: .depend  Makefile.am  Makefile.in  dlsode.f  mod_ADS.F90  mod_ADS.f90  mod_Config.f90.in  mod_Coord.F90  mod_Coord.f90  mod_Dbs.F90  mod_Dbs.f90  mod_Deposit.F90  mod_Deposit.f90  mod_Domain.F90  mod_Ensemble.F90  mod_Ensemble.f90  mod_F3D.F90  mod_F3D.f90  mod_Grid.F90  mod_Grid.f90  mod_Grn.F90  mod_Grn.f90  mod_InpOut.F90  mod_InpOut.f90  mod_KindType.F90  mod_Maths.f90  mod_Odepack.f90  mod_Parallel.F90  mod_Phys.F90  mod_Phys.f90  mod_PlumeBPT.F90  mod_Postp.F90  mod_Postp.f90  mod_Sat.F90  mod_Sat.f90  mod_Shared.F90  mod_Shared.f90  mod_Src.F90  mod_Src.f90  mod_StdAtm.f90  (+27 more)
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2
m4/: ax_netcdff.m4
