#
# Define the directory tree for the distribution and Makefile generation
#
SUBDIRS = Sources

# Additional files or directories to be distributed
EXTRA_DIST  = AUTHOR LICENSE Example Other build
EXTRA_DIST += Manual/Makefile Manual/fall3d.doxygen.config
#
# Set flags for aclocal (specifies the macro searching path)
# ACLOCAL_AMFLAGS = -I m4

# Remove these files with 'make clean'
CLEANFILES = *~

# Remove these files with 'make distclean'
# To remove installed files it is better to use 'make uninstall'
# DISTCLEANFILES = bin/*
