#
# This file is processed by automake (produces file Makefile.in)
#

# Define the target
if WITH_R4
  bin_PROGRAMS = Fall3d.r4.x
else
  bin_PROGRAMS = Fall3d.r8.x
endif

#
# Compiler flags
AM_FCFLAGS = $(NC_INC)

# Precision
if WITH_R4
  AM_FCFLAGS += -DWITH_R4
endif

# Parallel version
if WITH_MPI
  AM_FCFLAGS += -DWITH_MPI
  COMPILER=$(MPIFORT)
else
  COMPILER=$(FC)
endif

#
# Linker flags
#AM_LDFLAGS =

# BUILT_SOURCES =

EXTRA_DIST = .depend

# General rules
%.o: %.F90
	$(COMPILER) -c $(FCFLAGS) $(AM_FCFLAGS) $<

%.o: %.f90
	$(COMPILER) -c $(FCFLAGS) $(AM_FCFLAGS) $<

%.o: %.f
	$(F77) -c $(FFLAGS) $<

#
# Additional files to be cleaned with 'make clean'
CLEANFILES = *.o *.mod *~

# Files to be cleaned before distribution
DISTCLEANFILES = Fall3d.r[48].x

# Common source files for single and double precision
# Note: dlsode.f contains stuff used by slsode and is needed also for single precision
common_files = slsode.f dlsode.f mod_ADS.F90 mod_Config.f90 mod_Coord.F90 \
	mod_Dbs.F90 mod_Domain.F90 mod_F3D.F90 mod_Grid.F90 mod_Grn.F90 \
	mod_InpOut.F90 mod_KindType.F90 mod_Maths.F90 mod_Odepack.F90 \
	mod_Parallel.F90 mod_Phys.F90 mod_PlumeBPT.F90 mod_Sat.F90 mod_Deposit.F90 \
	mod_Shared.F90 mod_Src.F90 mod_StdAtm.F90 mod_Tgsd.F90 mod_Time.F90 \
	mod_nc_IO_names.F90 mod_nc_IO.F90 mod_Ensemble.F90 mod_Postp.F90 mod_Validation.F90 \
	task_Fall3d.F90 task_SetDbs.F90 task_SetSrc.F90 task_SetTgsd.F90 \
	task_SetEns.F90 task_PosEns.F90 task_runend.F90 task_PosVal.F90 task_Manager.F90

Fall3d_r4_x_SOURCES = $(common_files)
Fall3d_r8_x_SOURCES = $(common_files)

# Tasks
LDADD = $(NC_LIB)

# Linker
Fall3d_r4_x_LINK = $(COMPILER) -o $@ $(AM_LDFLAGS) $(LDFLAGS)
Fall3d_r8_x_LINK = $(COMPILER) -o $@ $(AM_LDFLAGS) $(LDFLAGS)

#
# Dependencies are included from file .depend, generated by makedepf90
# To manually generate the dependencies issue the command: make .depend
# You need makedepf90 installed
#
.depend: Makefile.am $(common_files)
	if test ! -z '$(MAKEDEPF90)'; then $(MAKEDEPF90) $(common_files) > .depend; fi;
#
# Include dependencies file
include .depend
